# ArcDPS-Timer

./: .gitignore  .gitmodules  ArcDPS-Timer.sln  CMakeLists.txt  Dockerfile  LICENSE  Readme.md  vcpkg.json
ArcDPS-Timer/: ArcDPS-Timer.vcxproj  ArcDPS-Timer.vcxproj.filters  api.cpp  api.h  arcdps.cpp  arcdps.h  bosskill_recognition.cpp  bosskill_recognition.h  chrono-json.h  eigen.h  eventstore.cpp  eventstore.h  grouptracker.cpp  grouptracker.h  imgui-json.h  keybind-json.h  lang.cpp  lang.h  log.cpp  log.h  maptracker.cpp  maptracker.h  mod.cpp  mod.h  mumble_link.cpp  mumble_link.h  ntp.cpp  ntp.h  settings.cpp  settings.h  timer.cpp  timer.h  trigger_region.cpp  trigger_region.h  util.cpp  util.h  uuid-json.h  vcpkg.json
ArcDPS-Timer-Server/: ArcDPS-Timer-Server.pyproj  ArcDPS-Timer-Server.vcxproj  ArcDPS-Timer-Server.vcxproj.filters  CMakeLists.txt  Dockerfile  app.py  docker-compose.yml  group.cpp  group.h  main.cpp  main.py  receiver.h  requirements.txt  server.cpp  server.h  session.cpp  session.h  vcpkg.json
ArcDPS-Timer-Server2/: ArcDPS-Timer-Server2.pyproj  Dockerfile  docker-compose.yml  main.py  requirements.txt
